samples/_failures_safe/1761397779_a5e32a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5127183.c: In function ‘main’:
./samples/SAFE/__tmp_d5127183.c:168:12: error: missing terminating " character
  168 |     printf("\nTokenized output
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d5127183.c:168:5: error: expected expression at end of input
  168 |     printf("\nTokenized output
      |     ^~~~~~
./samples/SAFE/__tmp_d5127183.c:168:5: error: expected declaration or statement at end of input
